Fixed overflow issue

--- a/jobtracker.client/src/index.css
+++ b/jobtracker.client/src/index.css
@@ -22,8 +22,8 @@ a:hover {
   color: #535bf2;
 }
 
-body { 
-
+body {
+    overflow-x: hidden;
 }
 
 h1 {
